# lua_ardupilot_scripts

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .luacheckrc  .markdownlint-cli2.jsonc  .markdownlintignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE-MIT.md  README.md  app.yaml  pyproject.toml  requirements.txt
.checks/: docs.lua
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: broken_script.yml  config.yml  website_bug.yml
.github/workflows/: hook-tests.yml  lint.yml  pages.yml  update_docs_lua.yml
.pre-commit-hooks/: validate_scripts.py
.pre-commit-hooks/tests/: test_validate_scripts.py
applets/: BattEstimate.md  Heli_IM_COL_Tune.md  HelloWorld.lua  HelloWorld.md  ONVIF_Camera_Control.md  RockBlock-9704.md  RockBlock.md  Script_Controller.md  SmartAudio.md  UniversalAutoLand.md  VTOL-quicktune.md  advance-wp.md  ahrs-set-origin.md  ahrs-source-extnav-optflow.md  arming-checks.md  copter-deadreckon-home.md  copter-slung-payload.md  copter_terrain_brake.md  follow-target-send.md  leds_on_a_switch.md  motor_failure_test.md  net_webserver.md  param-lockdown.md  plane_package_place.md  plane_ship_landing.md  quadplane_terrain_avoid.md  video-stream-information.md  winch-control.md  x-quad-cg-allocation.md
drivers/: ExampleDriver.md
lua/applets/: BattEstimate.lua  BatteryTag.md  CAN_playback.md  Gimbal_Camera_Mode.md  Heli_IM_COL_Tune.lua  Heli_idle_control.lua  (+44 more)
scripts/: build_static.py  fetch_ardupilot_applets.py  install-lua-ls.sh
tools/: BatteryMonitor.md
website/: Dockerfile  docker-compose.yml  requirements.txt
(+25 files in other folders)
