[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "lua-community-scripts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["jinja2==3.1.6", "markdown==3.8", "pyyaml==6.0.2"]

[project.optional-dependencies]
dev = ["pre-commit==4.2.0", "pytest==8.3.5", "ruff==0.11.9"]

[tool.ruff]
line-length = 127
target-version = "py312"

[tool.pytest.ini_options]
testpaths = [".pre-commit-hooks/tests"]
